--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/rubik": "^5.2.5",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/lodash": "^4.17.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
