--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@fontsource/rubik": "^5.2.5",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
+    "i18next-browser-languagedetector": "^8.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.1",
     "react-router-dom": "^7.5.3",
     "yup": "^1.6.1"
   },
