--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/rubik": "^5.2.5",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
+    "i18next": "^25.1.3",
     "i18next-browser-languagedetector": "^8.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.503.0",
