--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
     "react-router-dom": "^7.5.3",
+    "react-use-websocket": "^4.13.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
