--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/inter": "^5.2.5",
     "@fontsource/rubik": "^5.2.5",
+    "@headlessui/react": "^2.2.7",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
     "i18next": "^25.1.3",
